# shinymedia

./: .gitignore  .nojekyll  README.md  build.mjs  package.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  publish.yml  release.yml
docs/: Makefile  _quarto.yml  _sidebar-r.yml  _sidebar.yml  index.qmd  objects.json  objects.txt  search.json  styles.scss
docs/_site/: search.json
docs/reference/: audio_spinner.html  audio_spinner.qmd  index.html  index.qmd  input_video_clip.html  input_video_clip.qmd
docs/reference/python/: audio_spinner.qmd  index.qmd
docs/reference/r/: audio_spinner.qmd  index.qmd  input_video_clip.qmd  multimodal_dep.qmd
pkg-py/: LICENSE
pkg-py/shinymedia/: ui.py
pkg-r/R/: audio_spinner.R  input_video_clip.R
pkg-r/man/: input_video_clip.Rd
python-package/: pyproject.toml
python-package/shinymedia/: ui.py
quarto/: _quarto.yml  _sidebar-python.yml  build-r-package-docs.R  index.qmd  objects.txt
quarto/_site/reference/: audio_spinner.html  index.html  input_video_clip.html
quarto/_site/shinymedia/: index.js
quarto/_site/site_libs/bootstrap/: bootstrap.min.css
quarto/reference/: index.qmd
quarto/reference/python/: input_video_clip.qmd
r-package/: DESCRIPTION  NAMESPACE
r-package/R/: audio_spinner.R  html_deps.R  input_video_clip.R  shinymedia-package.R
r-package/man/: audio_spinner.Rd  input_video_clip.Rd  multimodal_dep.Rd  shinymedia-package.Rd
reference/: audio_spinner.html  index.html  input_video_clip.html
shinymedia/: __init__.py  input.py  package-lock.json  package.json  ui.py
shinymedia/srcts/: audioSpinner.ts  index.ts  videoClipper.ts
site_libs/bootstrap/: bootstrap-da3d3833a5443ace4237fd38b1445c6c.min.css  bootstrap.min.css
srcts/: audioSpinner.ts  avSettingsMenu.ts  index.ts  videoClipper.ts
